--- a/views/globalposts/index.ejs
+++ b/views/globalposts/index.ejs
@@ -1,14 +1,29 @@
 <% layout("/layouts/boilerplate") %>
+
+
 <body >
-    <h3 >All global Posts</h3>
-    <form  method="GET" action="/home/new">
+    <h3 class="mt-3" >All global Posts</h3>
+    <!-- <form  method="GET" action="/home/new">
         <button >Create new Post</button>
-    </form>
-    <ul>
-        <% for(let globalpost of globalposts){ %>
-           <li ><a href="/home/<%=globalpost._id %>"><%= globalpost.title%></a></li> 
-        <% } %>
-    </ul>
+    </form> -->
+  <div class="row row-cols-lg-3 row-cols-md-3 row-cols-sm-1 mt-3">
+    <% for(let globalpost of globalposts){ %>
+    <a href="/home/<%=globalpost._id%>" class="post-link">
+    <div class="card col" >
+        <img src="<%=globalpost.images %>" class="card-img-top" style="height: 20rem" alt="post">
+        <div class="card-img-overlay"></div><div class="card-body">
+          <p class="card-text">
+            <b><%= globalpost.title%> </b>
+          <br>
+          <%= globalpost.author%>
+        </p>
+        </div>
+      </div>
+    
+      <% } %>
+    </a>
+  </div>
+
     
 </body>
 
