--- a/views/globalposts/new.ejs
+++ b/views/globalposts/new.ejs
@@ -1,16 +1,31 @@
 <% layout("/layouts/boilerplate") %>
-<body>
-    <h3>Create a new Post</h3>
+<body><div class="row">
+    <div class="col-8 offset-2">
+    <h3 class="mt-3">Create a new Post</h3>
+    <br>
     <form method="POST" action="/home" >
-        <input name="post[title]" placeholder ="enter title" type="text"  >
-        <br /><br />
-        <input name="post[author]" placeholder ="enter author name" type="text" />
-        <br/><br />
-        <input name="post[likes]" placeholder ="enter likes" type="number" />
-        <br /><br />
-        <textarea name="post[description]" placeholder ="enter description" ></textarea>
-        <br/><br />
-        <button>Add</button>
+        <div class="mb-3">
+            <label for="title" class="form-label">Title</label>
+            <input name="post[title]" placeholder ="enter title" type="text" class="form-control"  >
+        </div>
+        <div class="mb-3">
+            <label for="description" class="form-label">Description</label>
+            <input name="post[author]" placeholder ="enter description"  type="text" class="form-control" />
+        </div>
+        <div class="mb-3">
+            <label for="image" class="form-label">Image</label>
+            <input name="post[likes]" placeholder ="enter image url" type="text" class="form-control" />
+        </div>
+        <div class="mb-3">
+        <label for="poem" class="form-label">Literary Piece</label>
+        <textarea name="post[description]" placeholder ="enter your poem" class="form-control" rows="4"></textarea>
+        </div>
+        <button class="btn btn-dark add-btn mt-3">Add</button>
+        <br><br>
+        
     </form>
+</div>
+</div>
+    
     
 </body>
