--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,3 +1,16 @@
 <footer >
-    <div>Footer</div>
+    <div class="f-info">
+        <div class="f-info-social social-links">
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-linkedin"></i>
+            <i class="fa-brands fa-square-github"></i>
+        </div>
+        <div class="f-info-brand">
+            &copy;Poetica
+        </div>
+        <div class="f-info-links">
+            <a href="/about">About</a>
+            <a href = "/contributors">  Contributors</a>
+        </div>
+    </div>
 </footer>
