--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,15 +1,19 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-md bg-body-light border-bottom sticky-top">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Navbar</a>
+      <a class="navbar-brand" href="/"><i class="fa-solid fa-pen-nib px-2 icon"></i>Poetica</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-          <a class="nav-link" href="#">Features</a>
-          <a class="nav-link" href="#">Pricing</a>
-          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+          <a class="nav-link" href="/home">Home</a>
+          <a class="nav-link" href="/home/new">Create Post</a>
+        </div>
+
+        <div class="navbar-nav ms-auto">
+          <a class="nav-link" aria-current="page" href="/signup">Signup</a>
+          <a class="nav-link" href="/login">Login</a>
+          <a class="nav-link" href="/logout">Logout</a>
         </div>
       </div>
     </div>
